fix up pull_tweets method in Tweet model, temporary view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,21 @@
-<div id="testimonies">
-	<% Testimony.order("tweet_id desc").limit(3).each do |testimony| %>
-  		<blockquote><%= testimony.content %></blockquote>
-  		<div class="from">&mdash; @<%= testimony.screen_name %></div>
+<div id="tweets">
+	<% Tweet.order("tweet_id desc").limit(3).each do |tweet| %>
+  		<blockquote><%= tweet.content %></blockquote>
+  		<div class="from">&mdash; @<%= tweet.twitter_name %></div>
+  		<div class="from">Tweeted at: @<%= tweet.tweeted_at %></div>
 	<% end %>
 </div>
 
+
+<!-- 
+add in perma-url in the format of 
+https://twitter.com/paulmdavis/status/244554260874948609
+ html_safe https :// twitter.com/   #{testimony.screen_name} / status / 
+ also need to add in user photo
+	-->
+
 <h1>Welcome</h1>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<p>Since Twitter search results don't last forever, I set up this site to archive tweets with hashtag #cfaATX once a day.</p>
 
 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
