--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div id="tweets">
-	<% Tweet.order("tweet_id desc").limit(50).each do |tweet| %>
+	<% Tweet.order("tweet_id desc").each do |tweet| %>
   		<blockquote><%= tweet.content %></blockquote>
   		<div class="from">&mdash; @<%= tweet.twitter_name %></div>
   		<div class="from">Tweeted at: @<%= tweet.tweeted_at %></div>
