--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div id="tweets">
 	<% Tweet.order("tweet_id desc").each do |tweet| %>
-  		<blockquote><%= tweet.content %></blockquote>
+  		<blockquote><%= auto_link(tweet.content) %></blockquote>
   		<div class="from">&mdash; @<%= tweet.twitter_name %></div>
   		<div class="from">Tweeted at: @<%= tweet.tweeted_at %></div>
 	<% end %>
