--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
 	<% Tweet.order("tweet_id desc").each do |tweet| %>
   		<p> <%= tweet.twitter_name %> says:</p>
   		<blockquote><%= auto_link(tweet.content) %></blockquote>
-  		
   		<p><%= tweet.tweeted_at %> | <a href="https://twitter.com/<%= tweet.twitter_name %>/status/<%= tweet.tweet_id %>">Permalink</a></p>
+  		<hr />
 	<% end %>
 </div>
 
@@ -18,8 +18,6 @@ https://twitter.com/paulmdavis/status/244554260874948609
 	<!-- set up autoscroll -->
 
 <img src="assets/cfaatx_2.png">
-<h1>Welcome</h1>
+<h1>#cfaATX Tweets</h1>
 
-<p>Since Twitter search results don't last forever, I set up this site to archive tweets with hashtag #cfaATX once a day.</p>
-
-<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h3>Since Twitter search results don't last forever, I set up this site to archive tweets with hashtag #cfaATX once a day.</h3>
