update home page text

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,4 +20,4 @@ https://twitter.com/paulmdavis/status/244554260874948609
 <img src="assets/cfaatx_2.png">
 <h1>#cfaATX Tweets</h1>
 
-<h3>Since Twitter search results don't last forever, I set up this site to archive tweets with hashtag #cfaATX once a day.</h3>
+<h3>Since Twitter search results don't last forever, I set up this site to archive tweets with hashtag #cfaATX once a day. It begins the morning of Code Across America II: Y'all Come Hack Now! on Saturday, September 8, 2012.</h3>
