add background image

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,5 +1,8 @@
 html, body {
-  background-color: #4B7399;
+  
+  background-image:url('cityhall.jpg');
+
+  background-position:center; 
   font-family: Verdana, Helvetica, Arial;
   font-size: 14px;
 }
