--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,4 +14,9 @@
 
 <h4><p>It begins the morning of Code Across America II: Y'all Come Hack Now! on Saturday, September 8, 2012.</p></h4>
 
-
+<br />
+<br />
+<br />
+<br />
+<br />
+Make this site cooler! Code is <a href="https://github.com/joemerante/atxtweets">here</a>.
