add new relic for performance monitoring

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 <img src="assets/cfaatx_2.png">
 <h1>#cfaATX Tweets</h1>
 
-<h3><p>Since Twitter search results don't last forever, I set up this site to archive tweets with hashtag #cfaATX once a day. </p></h3>
+<h3><p>Since Twitter search results don't last forever, this site archives tweets with hashtag #cfaATX once a day. </p></h3>
 
 <h4><p>It begins the morning of Code Across America II: Y'all Come Hack Now! on Saturday, September 8, 2012.</p></h4>
 
